--- a/shop/src/App.css
+++ b/shop/src/App.css
@@ -1,3 +1,7 @@
+.cart_title {
+  padding: 30px 0;
+}
+
 .start {
   opacity: 0;
 }
@@ -5,6 +9,14 @@
 .end {
   opacity: 1;
   transition: opacity 0.5s;
+}
+
+.btn_more {
+  background-color: #fff;
+  color: #333;
+  border:none;
+  font-size: 20px;
+  margin-top: 30px;
 }
 
 .main-bg {
